<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CheckItemsActivity">

    <LinearLayout
        android:id="@+id/llTopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/select_page"
            android:textColor="@color/red_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_subscript_24" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/my_button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>
    <View
        android:id="@+id/viewParent"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/llTopView"
        android:layout_height="2dp"
        android:background="#B5AEAE" />

    <LinearLayout
        android:id="@+id/llDetailsItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewParent"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/llDetailsItem"
        android:layout_height="2dp"
        android:background="#B5AEAE" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVSelectedItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        tools:itemCount="16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_check" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/add"
        android:layout_margin="18dp"
        android:gravity="center|bottom"
        android:background="@drawable/my_button_background"
        android:layout_alignBottom="@+id/rVSelectedItems"
        android:textSize="20sp" />

</RelativeLayout>