<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_subscript_24" />

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            tools:text="Service Name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_priority_high_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="QTY"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Amount"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/my_custom_background"
            android:gravity="center"
            android:hint="@string/qty"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/my_custom_background"
            android:gravity="center"
            android:hint="@string/date"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/my_custom_background"
            android:gravity="center"
            android:hint="@string/amount"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/my_custom_background"
        android:elevation="2dp"
        android:gravity="start"
        android:hint="@string/comment"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="25sp" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#B5AEAE" />

</LinearLayout>